rename secret to hopefully kick of redo

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/basic-auth
 metadata:
-    name: immich
+    name: immich-db
     namespace: databases
 stringData:
-    username: ENC[AES256_GCM,data:RO1v97Op,iv:bYlMM9qrI+vJ43EftLdQNlA3AV9OwxUsMzYWPA9Lt34=,tag:VK+ZiqUetJ/iLq+WEO69XA==,type:str]
-    password: ENC[AES256_GCM,data:AaOrF2NkF/ltXkTtHUvjkHwd4cnqQDEeFB3qphbmGenJWuO6B6cNkyo44PO/5nJFcGI=,iv:U6l3kQUIxy+QTxzNZm1yiKYTC9W8e2XJNzEQVW26wKU=,tag:8wNE0XPfl4V1YPl+gxYG5A==,type:str]
+    username: ENC[AES256_GCM,data:SPLe3og9,iv:0b82ZkOMU6fDj3auumC0SJ5N7Y3SiLmYML4YHseD1JA=,tag:4ysVjtQkiVR1NoAMNNj9LA==,type:str]
+    password: ENC[AES256_GCM,data:eR/5YuLeMQ5TTSOzGMHjV2e+srQfLPzqOO9BpT6b/ylExvU+JdrrvO9ac5vM8EYlF20=,iv:zkoAco2wgG+ZZYx7ZyP6ccwG88f0J43/wf77/yljTNk=,tag:IWtXjEW8RaTK6L3Ggs3bKQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtMElBRHMxRlExNjcvbW9Q
-            dksvdUkwS1JtcE83QjFHSVdPMkZnK2cwM1VJCjMrWjZKazdTekdhZ1JPc3NMSVl5
-            ci9uYnd1M2xkdHNaaU5EME9WVTJLcUEKLS0tIHQ5NjNhKzY0aE9Ub1Z3S2F6ZVU2
-            OWlHQ1YwYkhFZGpCWVBsRjhXU2pQZ28Kk1gbrPd4SRs2EBc1wrU1EJczooA6NprV
-            CpEfkxVvPvT1XZLdgLTpYURR9Mfpzpgzi2exhqnqAE+zirV2njPWzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBycy9YcUVqNVF5dFJWRGNL
+            U3UzVmcxdE9tb2gvTGNOU0g3Wkp2Q0xORkUwCk55VDBGVlg1aWJhSGFBc0p6NjBJ
+            SWdKZU05UFpFTzVEUzBhMnBUWkxsUFUKLS0tIG9vUlNFY2dsQ1NNdXdyU0Zvd0Iv
+            Z0V6c3RTSE4rMXNmeXdzdFRkanNraHMKabGLILUmnTcB/B68EyxyzSkwG0mTaJKr
+            merAIDh0b19X3UyxAGNlgDNfNk9QvqFoNpVrV45f4KnInKs5Jhsi+A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:26:50Z"
-    mac: ENC[AES256_GCM,data:btdwmzJhT70PmiDgF6k7OG33kf3ohsP+8L9MnpHFBKDjttzNSPIT+xTqNdNU+2Nm7bzUapPt5LGf1ytlZ3IZPOo+jS/yhnf0I3IUsQpNkEDJ3C148dfkhe3udy3kqc+U9MegxsOcI/qBLPGzMMrKoLsDOEL9ZfpN5RnOpttny1Q=,iv:UP2j9h1L0lI6meElEkJAFP7QlAN6NMhceetbUJnXFkg=,tag:UniYg4IoIbT8hpI8QUWyzw==,type:str]
+    lastmodified: "2024-07-02T04:31:49Z"
+    mac: ENC[AES256_GCM,data:icNHNyQCtmspcZzSQRskMjezyma8UdI2meZ11/MeV8a5Mo8GTcJeEhp6C/8Y24PqbBD8V2WHdJuEvX0zL1vS7rTDlclaUZLUT2j48voi1f2Ai9y0/sFbRojyea1sE7uuQdqG/UlliVCT9SfCrTjj6uBzbRTsVkLiv6qtonDmGp8=,iv:lFnluyd2UQ9jnVD05PbYS6CLlyJK9vp/nooGIBYvic4=,tag:Re4jaTMv3rcs7IWQC0K3dA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
