fix super user secret for db

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cloudnative-pg-secret
     namespace: databases
 stringData:
-    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:5k22,iv:piK7rp5HPxomxtrxLdBB2JiUK6972xhyOWhs2tqZrTg=,tag:i82NB0W3UJsfqxaUPoiegA==,type:str]
-    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:O45Z32knrKe6qmNj/vlZyTPdjNCCUbDyvsGILP4wTfXoV9kYYYzM2Ud0l38Fver0a+RRZxIl4cPrXyA3hHmegTX11Pik/24YqRp6dxO65+14Mbr4LX+TQOLpHnBbDH3AZbvqSqPZXBVqGae02f3zSwMd6j7s4QoE5G1PaM5tMhE=,iv:7MSwj3HFvtSgphuFJEFyGdijjZ1yIXkj7pLmJ9IopsI=,tag:GO3BnbPMys0F5CwWG/eocg==,type:str]
+    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:bPXQ,iv:aPRYFcQhTOx9db6Uzi5IWE+crG26vVWgwTSKIakEIh8=,tag:31z+rtD7NHm44b1ZyZpFkQ==,type:str]
+    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:qzZNMZr7sf1qkiQQZ1krxFaPbTZ5/1PNqQ2xjrCCN7+gBBWRjdHPcSsSlzsLEAGVT4PdReb9guflVGN/Du0TNMNWotfu515STXREB3QkAhZveD8CFqTLWoYp4nqgZry0qq1NhwUpkmU+kfyEhUQR+VFsSOXdnPYRZLQTeh3EgGg=,iv:NoeD2J9+eTDDoHJYRhiW2PSwkUYQsGA1yA36oz4ui9s=,tag:vqXVZnCBWSnFNElM+oQKRA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvcVBrV0Z1Ui9BRmpBREVq
-            N3FmcTFBT1JRUnM3Y1ZRblErL2NkcWZ6d0NvCjVTK2N6RGRUeWNRNjhOLzlRNVRG
-            TmEwanB3cHZrcFQ2UmpvdC9lU0J3bncKLS0tIDBqSzhiNDNzcmN3M2t2V2lISFVQ
-            UkxYQ3ZpSHRLZzBDNkRZWXhVN0VJOWMK3yvjK5GE2k1ASCRWoWUn2OglBaZlh2hE
-            QX+N8F01e+LbC7dcQwnEFwV95lnBDs0Tkde9iFSc1hFoU/uMYGECcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOeXZmRklCMDN0MFlvSFVZ
+            ZXhlZ0VpRUt0UVJhcFZoR1B5WEJEeDhaY0VNCmV3YUF4ZVNGM1RqWWNmNitXVzhV
+            VVVKZ3YxRHI3K0dqRE1WSHl6Uk1QcG8KLS0tIHE0Sm9sUTFEWVJSVUZ1MDRIUjF3
+            L2FlSDhtdVpNNmtIOUlpbzJoMXZYb1EKuI/rfnFGAkYU8yqjKTyKxLkYltAmNZvd
+            XE6N9ziJuMff89999RxrnGztRq/wG3kAjqOyVcQUB+MnKUTPpp5gLA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T03:25:22Z"
-    mac: ENC[AES256_GCM,data:wiNIR36ILhgvxcbaW+LW1HDYygaU+3yiRivljyVjLV1O5QFSRxdoOEp8XHuk1PlWYKfTUm4KEE/aHJP7T7t/PxYsLjsflP5NvCPGedbnNY6dS/JILoMyFHc53Gr5AfFM2BKZ+MEnT2FzcIWvL7JC0HXXmjDQM4hKO5mytkBa5q8=,iv:yUgM+QX+IlXabEwEHHdQdjcnLov/SlIq/BJW3rLBhqo=,tag:w9+51WV7LXgvBblRrr6KDw==,type:str]
+    lastmodified: "2024-07-02T04:48:57Z"
+    mac: ENC[AES256_GCM,data:pS4npuc8ye/kcrcukkfU//BHE4uMjNB2lOrNxzeINzxy9Pgf3sxQkrFg4ZKe+YtRILJAwkP0VSbi/RuGwjP6F8/1I5U8Vt3M4gbw9TaUmbYfuyR9JbjLOAVdTmlrmwpEched5PDd4FkR2zXVLXckIFrE6+i8HNDbS+6DBf1TP3A=,iv:1n0fGcC/PEKkdl+S7SOnaKCb8dFx2JfbyjdfD5h+CUw=,tag:FrKF4sE3m8mQwewtfBTI7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
