--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
@@ -3,7 +3,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: postgres16
+  name: immich-db
   namespace: databases
 spec:
   instances: 3
