--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -4,9 +4,9 @@ type: kubernetes.io/basic-auth
 metadata:
     name: immich-db
     namespace: databases
-stringData:
-    username: ENC[AES256_GCM,data:SPLe3og9,iv:0b82ZkOMU6fDj3auumC0SJ5N7Y3SiLmYML4YHseD1JA=,tag:4ysVjtQkiVR1NoAMNNj9LA==,type:str]
-    password: ENC[AES256_GCM,data:eR/5YuLeMQ5TTSOzGMHjV2e+srQfLPzqOO9BpT6b/ylExvU+JdrrvO9ac5vM8EYlF20=,iv:zkoAco2wgG+ZZYx7ZyP6ccwG88f0J43/wf77/yljTNk=,tag:IWtXjEW8RaTK6L3Ggs3bKQ==,type:str]
+data:
+    username: ENC[AES256_GCM,data:LdWd+rm/2P8FNPqq,iv:1UGnY0gvErHKrgLE2sNPBBKI68kv4uRqt61eOezQQp4=,tag:qMlOyiyadBrF1A0ztO6Jyg==,type:str]
+    password: ENC[AES256_GCM,data:2p6LiRNwzAMmK2gpqPDA5pb/2RKUzmckMLWleTepzY1N/0RZGtUnuQxqwcgMLi4SfZowlRDKCenBdqaLVVTzQggl3V0=,iv:LVxPRQ052TmilWdGXpXAtpF5sBQNxouosAf7wQDIIOo=,tag:h6LhKQJJXYCzM7ys4JKmiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBycy9YcUVqNVF5dFJWRGNL
-            U3UzVmcxdE9tb2gvTGNOU0g3Wkp2Q0xORkUwCk55VDBGVlg1aWJhSGFBc0p6NjBJ
-            SWdKZU05UFpFTzVEUzBhMnBUWkxsUFUKLS0tIG9vUlNFY2dsQ1NNdXdyU0Zvd0Iv
-            Z0V6c3RTSE4rMXNmeXdzdFRkanNraHMKabGLILUmnTcB/B68EyxyzSkwG0mTaJKr
-            merAIDh0b19X3UyxAGNlgDNfNk9QvqFoNpVrV45f4KnInKs5Jhsi+A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByekthTk1GaFNWZUJUdUpN
+            Mjh6UFJpSGcyK0dnOTFNYnBZamtSU01mQVVVCkpZYjczbzNoSnkwNlRlekVJWHg3
+            RVhtcTRIdXJWdVl6alFNSk1GSkVMMzAKLS0tIG1yT0svOE9nMWxaVEtvR2kzVXNN
+            eVR5KzVCdFNNT2o4NFo4V1Zkek9BVlUK7K8FcEOX7xydgPrRBD68iIy4K1vD1XJM
+            m9EvNs65D0I9Ko7DvSA2wEA07cvwyi2f3qT8xQYHr0LgbsfJ8atQWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:31:49Z"
-    mac: ENC[AES256_GCM,data:icNHNyQCtmspcZzSQRskMjezyma8UdI2meZ11/MeV8a5Mo8GTcJeEhp6C/8Y24PqbBD8V2WHdJuEvX0zL1vS7rTDlclaUZLUT2j48voi1f2Ai9y0/sFbRojyea1sE7uuQdqG/UlliVCT9SfCrTjj6uBzbRTsVkLiv6qtonDmGp8=,iv:lFnluyd2UQ9jnVD05PbYS6CLlyJK9vp/nooGIBYvic4=,tag:Re4jaTMv3rcs7IWQC0K3dA==,type:str]
+    lastmodified: "2024-07-02T05:28:51Z"
+    mac: ENC[AES256_GCM,data:aZb1/EJRUFKicBueVo2yRwd0c79rS9TPCNczEF7K6EWWf3m1TvTRXaE1PFRK3q+vlTvSBX3da5ug9Q6zApEGr6h3Pvr3vyp5ULLAfmGE9QK4FXla4zDre4FFt9R1yEX7WdNsfDVwyfsQU7knL7/RP1ukgI1G/dt/A3R+ODtZGlA=,iv:6kqQ6+pPD7IYs8b9KiMkKnBVD4r0QTI144FoYwFj1rM=,tag:Aug1IXsIY2TGFWBRnqhRGg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
