revert secret change

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -4,9 +4,9 @@ type: kubernetes.io/basic-auth
 metadata:
     name: immich-db
     namespace: databases
-data:
-    username: ENC[AES256_GCM,data:LdWd+rm/2P8FNPqq,iv:1UGnY0gvErHKrgLE2sNPBBKI68kv4uRqt61eOezQQp4=,tag:qMlOyiyadBrF1A0ztO6Jyg==,type:str]
-    password: ENC[AES256_GCM,data:2p6LiRNwzAMmK2gpqPDA5pb/2RKUzmckMLWleTepzY1N/0RZGtUnuQxqwcgMLi4SfZowlRDKCenBdqaLVVTzQggl3V0=,iv:LVxPRQ052TmilWdGXpXAtpF5sBQNxouosAf7wQDIIOo=,tag:h6LhKQJJXYCzM7ys4JKmiw==,type:str]
+stringData:
+    username: ENC[AES256_GCM,data:cH+x8qg+,iv:ERdTcYe2gXwEQnYHsgy4WLLAMxGe3W6MhdbnjVtpBgs=,tag:C586GfMACKSaUhNx7Mjsyg==,type:str]
+    password: ENC[AES256_GCM,data:M1ytqxEAiLFtQwXQvLHS+X8kb8pQf3Ytz2IOf6lLZ3/2nVh3i8aelsE7G6Pk7v3rJgc=,iv:iRwfx9MOALA91eef4DfLLjJqhdbw9rQK3HjKJLUFodQ=,tag:fEMfQs5yR+TiTdeBgxfmgA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByekthTk1GaFNWZUJUdUpN
-            Mjh6UFJpSGcyK0dnOTFNYnBZamtSU01mQVVVCkpZYjczbzNoSnkwNlRlekVJWHg3
-            RVhtcTRIdXJWdVl6alFNSk1GSkVMMzAKLS0tIG1yT0svOE9nMWxaVEtvR2kzVXNN
-            eVR5KzVCdFNNT2o4NFo4V1Zkek9BVlUK7K8FcEOX7xydgPrRBD68iIy4K1vD1XJM
-            m9EvNs65D0I9Ko7DvSA2wEA07cvwyi2f3qT8xQYHr0LgbsfJ8atQWA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpb1BFNE9pL2trU0VQL2o4
+            Q1BlTFgwRGhTTEpBTEdxRUtaU2w0cGZaNFFRCkZvSWUwRzY2aHpUdGNOYUJ5Rlpr
+            elFwU3p4eENmTUczVnRCQ3NEa2Y2VTgKLS0tIFM3VXVQSWZmQjhLcFZ4c1o1Rk5T
+            bmFQcHRpN25ZaGxLRVIrbUNaTmsvamMKinvWswc1mF++SybFP6wEYojHppDEPMP3
+            3SRuM6wkPa4XpDgAtX+kqCNZqulPlkdQh7F8ygRX3xgHLztMp+XV4w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T05:28:51Z"
-    mac: ENC[AES256_GCM,data:aZb1/EJRUFKicBueVo2yRwd0c79rS9TPCNczEF7K6EWWf3m1TvTRXaE1PFRK3q+vlTvSBX3da5ug9Q6zApEGr6h3Pvr3vyp5ULLAfmGE9QK4FXla4zDre4FFt9R1yEX7WdNsfDVwyfsQU7knL7/RP1ukgI1G/dt/A3R+ODtZGlA=,iv:6kqQ6+pPD7IYs8b9KiMkKnBVD4r0QTI144FoYwFj1rM=,tag:Aug1IXsIY2TGFWBRnqhRGg==,type:str]
+    lastmodified: "2024-07-02T05:43:08Z"
+    mac: ENC[AES256_GCM,data:26VUTa3KVg6FAGy6KpkQQSQba1kTQS7ekxnHdUrZpGpM/C9iXMR5/A0DYFwKZTMaey/uJypujqX/fnpOCMxqwqFjarTy4CDco6DC02JFwDgzrE1rQ/0ftQxTkGzxfEM1WX028IL9pYtqAgnlVi5sKA5TzXriiSQda4yeAhHg58g=,iv:iZqddxcCtmLvOFmyAXUJ6qk0mOmtXMCctRfJRebEE4Q=,tag:4jDzBFfHjBekEjKlVFw/+w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
