fix pg superuser

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cloudnative-pg-secret
     namespace: databases
 stringData:
-    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:bPXQ,iv:aPRYFcQhTOx9db6Uzi5IWE+crG26vVWgwTSKIakEIh8=,tag:31z+rtD7NHm44b1ZyZpFkQ==,type:str]
-    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:qzZNMZr7sf1qkiQQZ1krxFaPbTZ5/1PNqQ2xjrCCN7+gBBWRjdHPcSsSlzsLEAGVT4PdReb9guflVGN/Du0TNMNWotfu515STXREB3QkAhZveD8CFqTLWoYp4nqgZry0qq1NhwUpkmU+kfyEhUQR+VFsSOXdnPYRZLQTeh3EgGg=,iv:NoeD2J9+eTDDoHJYRhiW2PSwkUYQsGA1yA36oz4ui9s=,tag:vqXVZnCBWSnFNElM+oQKRA==,type:str]
+    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:OY4HheoCVp6ztA==,iv:EHTM1EAff+tIdH5DszVwmPzldA8W5DXRkd8yNm42o20=,tag:jM0hy+GJl/JW9kyEdzU3mA==,type:str]
+    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:zH2vOOz0lAdJ0Y80XKU5nfcGtoOwzXeq5NOXIHdBlV6KV1Yscqmkp26kHnHKMjQtcupVLu+zjPuseHKYAt5lFrNumReA0VTICA09K6vNOzKMU8uNP1RV6F2Aj+pwn4s2vtqcIcY9Hy9BX5CODy+gSx9MU0g8OYQLnbmFeNHOzDE=,iv:w0H5zR6SBz5OHWlJjhAlOn6nOMJmWZs/tnG/5YqlRHs=,tag:n1FQqSDV5fBma8Ni+z9RYA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOeXZmRklCMDN0MFlvSFVZ
-            ZXhlZ0VpRUt0UVJhcFZoR1B5WEJEeDhaY0VNCmV3YUF4ZVNGM1RqWWNmNitXVzhV
-            VVVKZ3YxRHI3K0dqRE1WSHl6Uk1QcG8KLS0tIHE0Sm9sUTFEWVJSVUZ1MDRIUjF3
-            L2FlSDhtdVpNNmtIOUlpbzJoMXZYb1EKuI/rfnFGAkYU8yqjKTyKxLkYltAmNZvd
-            XE6N9ziJuMff89999RxrnGztRq/wG3kAjqOyVcQUB+MnKUTPpp5gLA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxNGgrSDhjeWFZRW9hakVF
+            VzJORlhTYVZFdms2QkxoV3cwN0I0VGozbkFBClhTV0JaYnplc2VyNTUwRGNoSGpi
+            dUtNVkN1Z0ZyWk5zeUl1MzRRWFNLdUEKLS0tIHhBSWk0dGs2eEhwdDJvV2l2S1Bn
+            eExQOTVscnBTQVM4ZkZMZmFjN3N1Qk0KBEH0Jx7hvHRZAUPtYYfqRqvNmgSd8/Sq
+            mwowCKTX4DeLV/F/1YjHGH7qPanO74z9Qu3Nr8sVBQW5Ap3XcLh0hQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:48:57Z"
-    mac: ENC[AES256_GCM,data:pS4npuc8ye/kcrcukkfU//BHE4uMjNB2lOrNxzeINzxy9Pgf3sxQkrFg4ZKe+YtRILJAwkP0VSbi/RuGwjP6F8/1I5U8Vt3M4gbw9TaUmbYfuyR9JbjLOAVdTmlrmwpEched5PDd4FkR2zXVLXckIFrE6+i8HNDbS+6DBf1TP3A=,iv:1n0fGcC/PEKkdl+S7SOnaKCb8dFx2JfbyjdfD5h+CUw=,tag:FrKF4sE3m8mQwewtfBTI7w==,type:str]
+    lastmodified: "2024-07-02T05:44:09Z"
+    mac: ENC[AES256_GCM,data:bY9N8wMP6bVyybYMKGb0n3YzojfHJmP0Tayg4kPVopb6mKqxn+VkOmSTR6xlERIY1RwfgEz8Qx/krxARTFG9OkjEv59aeuinJJHgfMRKpkIZV7nKh1JsKscQhZsuSMnM85mHpw8SiYORH16iA2fjQlxjsDm+KrTeyW9H6SZxRFw=,iv:6V0viA04dsR9NSaUQsZOxgyIWXvf6DclpGeuDID4vkQ=,tag:JsHuINwLRaJ2bBBov5hKyg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
