--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cloudnative-pg-secret
     namespace: databases
 stringData:
-    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:OY4HheoCVp6ztA==,iv:EHTM1EAff+tIdH5DszVwmPzldA8W5DXRkd8yNm42o20=,tag:jM0hy+GJl/JW9kyEdzU3mA==,type:str]
-    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:zH2vOOz0lAdJ0Y80XKU5nfcGtoOwzXeq5NOXIHdBlV6KV1Yscqmkp26kHnHKMjQtcupVLu+zjPuseHKYAt5lFrNumReA0VTICA09K6vNOzKMU8uNP1RV6F2Aj+pwn4s2vtqcIcY9Hy9BX5CODy+gSx9MU0g8OYQLnbmFeNHOzDE=,iv:w0H5zR6SBz5OHWlJjhAlOn6nOMJmWZs/tnG/5YqlRHs=,tag:n1FQqSDV5fBma8Ni+z9RYA==,type:str]
+    POSTGRES_SUPER_USER: ENC[AES256_GCM,data:I60fxM72OMY=,iv:DrHLTp7eh4yaCwmtGfGmZShGlO+xjt2JQncITPTrbp8=,tag:jAA3epuXNSWlEt+Dx6ltfg==,type:str]
+    POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:RpJ9q9FuIk89Bg9lmoqup4veWDUfPjWGcr/22Ehc+fIFsmFr5nP7maQMBOl04k/V6mlRPNq5ndYJO4UP4x4bWQkv/f6V03hQ7oLkwJ5OGvEtrUzpUsFh0VfDYM6RDoXpwGL5n6ySPQUe7f6/qYm9ytjb79gt5K7iQqOHZHT+ml4=,iv:BdHa8vgPsavPRIUSuH/WkWby+d5f0+InQLzQwqiRpS4=,tag:mXxidfAI66Ta6KAGoW47uQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxNGgrSDhjeWFZRW9hakVF
-            VzJORlhTYVZFdms2QkxoV3cwN0I0VGozbkFBClhTV0JaYnplc2VyNTUwRGNoSGpi
-            dUtNVkN1Z0ZyWk5zeUl1MzRRWFNLdUEKLS0tIHhBSWk0dGs2eEhwdDJvV2l2S1Bn
-            eExQOTVscnBTQVM4ZkZMZmFjN3N1Qk0KBEH0Jx7hvHRZAUPtYYfqRqvNmgSd8/Sq
-            mwowCKTX4DeLV/F/1YjHGH7qPanO74z9Qu3Nr8sVBQW5Ap3XcLh0hQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2eE1BTkswQWMvL1BicHNa
+            VU5aZEJXeCtabkJZc0tYME9STXJ3NTIzd0Z3Ckcrb2JzMERlUTJwV3l0emJEenJj
+            bk0rcVhxOU1ycm9heDdNUS9JMVdCR3cKLS0tIDRwZ0lzZnpzQy9UQ2lJMnBVK1Q3
+            RGlDekZZMkdMbUt2QUVkaklMSmdablUK7edmMfEBULLoorgqTkqiarPJY+Vir1zS
+            UmbpUcI4Byl/RCEpM5AmtCPBAWhnhIu7+z6/JE/h8tHD/pQ9Q4SCUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T05:44:09Z"
-    mac: ENC[AES256_GCM,data:bY9N8wMP6bVyybYMKGb0n3YzojfHJmP0Tayg4kPVopb6mKqxn+VkOmSTR6xlERIY1RwfgEz8Qx/krxARTFG9OkjEv59aeuinJJHgfMRKpkIZV7nKh1JsKscQhZsuSMnM85mHpw8SiYORH16iA2fjQlxjsDm+KrTeyW9H6SZxRFw=,iv:6V0viA04dsR9NSaUQsZOxgyIWXvf6DclpGeuDID4vkQ=,tag:JsHuINwLRaJ2bBBov5hKyg==,type:str]
+    lastmodified: "2024-07-02T05:50:47Z"
+    mac: ENC[AES256_GCM,data:/gs5e7tkgykF0bOSPKYwo6ExU/J1D9uu/L+kcIUTxcwCDor+LPWkZpVAUJHpuk1QJVrRj1y4/22tsrTtF3o3YCY7YRQ7zU8iSA1DH8MaexdmNp3xzh0KdACgI2t2SW69bW9Q8uhRr0YCfxvgxjSIwtP8V8k3XFzZbP5yqyU4Czo=,iv:gN9kqNELil0q9AZY29qGaPXk90xMhbMPJFYOqI7Oa78=,tag:74yKPhLYwwB0525QOQUnOA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
