if at first you don't succeed, bash your head against the wall some more

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -4,9 +4,9 @@ type: kubernetes.io/basic-auth
 metadata:
     name: immich-db
     namespace: databases
-stringData:
-    username: ENC[AES256_GCM,data:cH+x8qg+,iv:ERdTcYe2gXwEQnYHsgy4WLLAMxGe3W6MhdbnjVtpBgs=,tag:C586GfMACKSaUhNx7Mjsyg==,type:str]
-    password: ENC[AES256_GCM,data:M1ytqxEAiLFtQwXQvLHS+X8kb8pQf3Ytz2IOf6lLZ3/2nVh3i8aelsE7G6Pk7v3rJgc=,iv:iRwfx9MOALA91eef4DfLLjJqhdbw9rQK3HjKJLUFodQ=,tag:fEMfQs5yR+TiTdeBgxfmgA==,type:str]
+data:
+    username: ENC[AES256_GCM,data:0V9lXEWR,iv:fofHN48PuCb5zfwKehueqL1Cgi9BeQiPYJzOa0273oA=,tag:aI7M5MhaIzWO+0+ZvJGHFQ==,type:str]
+    password: ENC[AES256_GCM,data:OaWAfq67q7XeBnJi420mQ1l4hv19/zlmUXdcR7waZPieg8UFIP2VruadR8hkq9xdbFs=,iv:/L+B1CFbmFcrO6m+WFDB3xOZfzo3Ow3szgj9YNHApTo=,tag:8WAgsyiH5Ov2QvOZ7K+vaA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpb1BFNE9pL2trU0VQL2o4
-            Q1BlTFgwRGhTTEpBTEdxRUtaU2w0cGZaNFFRCkZvSWUwRzY2aHpUdGNOYUJ5Rlpr
-            elFwU3p4eENmTUczVnRCQ3NEa2Y2VTgKLS0tIFM3VXVQSWZmQjhLcFZ4c1o1Rk5T
-            bmFQcHRpN25ZaGxLRVIrbUNaTmsvamMKinvWswc1mF++SybFP6wEYojHppDEPMP3
-            3SRuM6wkPa4XpDgAtX+kqCNZqulPlkdQh7F8ygRX3xgHLztMp+XV4w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS3JveXpwcnVZYVhYRkFM
+            S1M0bVJQNGxnWkl2eDJhOWRWTHNXSDNnaDNFCjcraWFidDE3NngvR2YwK0lxa2lL
+            eFVmYWFBMW9teXdoM2NtdjJoNXIrRmcKLS0tIEhHR3Z3V0RET1E2NFhJRzE0UnMr
+            Zno3dnQ4QjhrM3didTN3VXAwS3J1VkEKE8GQ8mJju+A+Paklb4wZedIhBXS4kPlE
+            EOVmiiE1STnV8dw9ukdMVaf3TfPDwBurArgGUM4b8YIxkxEwv5aZXQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T05:43:08Z"
-    mac: ENC[AES256_GCM,data:26VUTa3KVg6FAGy6KpkQQSQba1kTQS7ekxnHdUrZpGpM/C9iXMR5/A0DYFwKZTMaey/uJypujqX/fnpOCMxqwqFjarTy4CDco6DC02JFwDgzrE1rQ/0ftQxTkGzxfEM1WX028IL9pYtqAgnlVi5sKA5TzXriiSQda4yeAhHg58g=,iv:iZqddxcCtmLvOFmyAXUJ6qk0mOmtXMCctRfJRebEE4Q=,tag:4jDzBFfHjBekEjKlVFw/+w==,type:str]
+    lastmodified: "2024-07-02T05:55:44Z"
+    mac: ENC[AES256_GCM,data:80jOYEDowjUTpCcLTzGDUV4KLkkjReKLSatCnYJCMANL2SOKwr89uDnHoj+qUC39tKzXSglwAFLRtkWEAdOAN17wo1ECNsigV88x8ol7teY5jyTIKMzKBRFKdYjL/mj1zhittqK+iwV2BnGdDRprOwlJKf+VqXLYRpSgqn0a+kA=,iv:mWVNt3vKuMFs5PzRTDkQNeAR9WIHu4eQ4iLBXcXCTHI=,tag:Qxx7PFbnd5pplOo5r/Azlw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
