--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: immich-db
     namespace: databases
 data:
-    username: ENC[AES256_GCM,data:0V9lXEWR,iv:fofHN48PuCb5zfwKehueqL1Cgi9BeQiPYJzOa0273oA=,tag:aI7M5MhaIzWO+0+ZvJGHFQ==,type:str]
-    password: ENC[AES256_GCM,data:OaWAfq67q7XeBnJi420mQ1l4hv19/zlmUXdcR7waZPieg8UFIP2VruadR8hkq9xdbFs=,iv:/L+B1CFbmFcrO6m+WFDB3xOZfzo3Ow3szgj9YNHApTo=,tag:8WAgsyiH5Ov2QvOZ7K+vaA==,type:str]
+    username: ENC[AES256_GCM,data:na2jZFUmlihgxI8u,iv:4wx4xcb/zbfDkj6naF4RoAcGNZQOIRZpdVroWME6OCU=,tag:2w15DX1r4fBYKREvrostog==,type:str]
+    password: ENC[AES256_GCM,data:G1WB8ozbyJCIc1f+g6eF2eopnIdYBeo7x8hRN+uM/Diq/kHCAy6Vcem1iefzaJ7VLO1TnPFvFUqU5frGbETNKD4lZoY=,iv:HOEYKPFx59GKci/tFZRI9B+aSmx2NLpf/GJswR0/Tho=,tag:zYidqONcmV0xRsNLOozxqQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyS3JveXpwcnVZYVhYRkFM
-            S1M0bVJQNGxnWkl2eDJhOWRWTHNXSDNnaDNFCjcraWFidDE3NngvR2YwK0lxa2lL
-            eFVmYWFBMW9teXdoM2NtdjJoNXIrRmcKLS0tIEhHR3Z3V0RET1E2NFhJRzE0UnMr
-            Zno3dnQ4QjhrM3didTN3VXAwS3J1VkEKE8GQ8mJju+A+Paklb4wZedIhBXS4kPlE
-            EOVmiiE1STnV8dw9ukdMVaf3TfPDwBurArgGUM4b8YIxkxEwv5aZXQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvUS96L2pkWWJPNFFEeFlt
+            RVVXVGRubEpsL1RkREhmZHhYNmhTVTlCTmswCnN5VkZidEJVdTUwblk1WUJYM29R
+            K3JBOWQ5V3Y3dm40WmZQTnFxcE9vb2MKLS0tIDRLL2pPY1lCNkh3SnlUVGN5QTls
+            MTcxbE9MRTFDUHd5c2cvZXJhbmVBZ2cKaI333DpgiSXuQvRZXRBeX/p73M/FKNnk
+            CRGAUIC4oTEQn1IUeuf7B1dJnHJf2x/XzunVdfo2QsMNohntP/dDAA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T05:55:44Z"
-    mac: ENC[AES256_GCM,data:80jOYEDowjUTpCcLTzGDUV4KLkkjReKLSatCnYJCMANL2SOKwr89uDnHoj+qUC39tKzXSglwAFLRtkWEAdOAN17wo1ECNsigV88x8ol7teY5jyTIKMzKBRFKdYjL/mj1zhittqK+iwV2BnGdDRprOwlJKf+VqXLYRpSgqn0a+kA=,iv:mWVNt3vKuMFs5PzRTDkQNeAR9WIHu4eQ4iLBXcXCTHI=,tag:Qxx7PFbnd5pplOo5r/Azlw==,type:str]
+    lastmodified: "2024-07-02T06:00:42Z"
+    mac: ENC[AES256_GCM,data:l2/DZXsdNHA5cIAFtYtU++aviJtmbQ5GYFJzRGQwxHh4KykrjeevIEfyZj7ZfZ2s2RdW+/XprP6chc9VITsqIbWHb2vIS2NG1SHPitGCtgasUMIhnXPq6lhKePTYL0hyCi78TRutWXskJ/zcCW/EJmNz34rvgFSLXeBhetiRaik=,iv:xSGiW05zQg8w4huHq2hSdaC8KacLV6ym7Gj1jUMcobo=,tag:Trd5haOi/z934mW47NcaGQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
