--- a/kubernetes/cluster0/apps/home/immich/ks.yaml
+++ b/kubernetes/cluster0/apps/home/immich/ks.yaml
@@ -18,12 +18,36 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-apps-immich-db
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-longhorn
+    - name: cluster-apps-immich-shared
+  path: ./kubernetes/cluster0/apps/home/immich/db
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: immich-db
+      namespace: home
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-apps-immich-redis
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-longhorn
-    - name: cluster-apps-cloudnative-pg-cluster
+    - name: cluster-apps-immich-db
     - name: cluster-apps-immich-shared
   path: ./kubernetes/cluster0/apps/home/immich/redis
   prune: true
@@ -47,7 +71,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-apps-cloudnative-pg-cluster
+    - name: cluster-apps-immich-db
     - name: cluster-apps-immich-shared
     - name: cluster-apps-immich-redis
   path: ./kubernetes/cluster0/apps/home/immich/microservices
@@ -72,7 +96,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-apps-cloudnative-pg-cluster
+    - name: cluster-apps-immich-db
     - name: cluster-apps-immich-redis
     - name: cluster-apps-immich-shared
   path: ./kubernetes/cluster0/apps/home/immich/server
