--- a/kubernetes/cluster0/apps/home/immich/db/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/db/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
           main:
             image:
               repository: registry.hub.docker.com/tensorchord/pgvecto-rs
-              tag: pg16-v0.3.0
+              tag: pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
             resources:
               requests:
                 cpu: 100m
