--- a/kubernetes/cluster0/apps/home/immich/server/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/server/helm-release.yaml
@@ -68,7 +68,7 @@ spec:
         hosts:
           - host: &host photos.${SECRET_PUBLIC_DOMAIN}
             paths:
-              - path: /api
+              - path: /
                 pathType: Prefix
                 service:
                   identifier: app
