--- a/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
@@ -59,20 +59,20 @@ spec:
         ports:
           http:
             port: 3001
-    ingress:
-      app:
-        enabled: true
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-        hosts:
-          - host: &host photos.${SECRET_PUBLIC_DOMAIN}
-            paths:
-              - path: /api
-                pathType: Prefix
-                service:
-                  identifier: app
-                  port: http
+    # ingress:
+    #   app:
+    #     enabled: true
+    #     annotations:
+    #       traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    #       external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+    #     hosts:
+    #       - host: &host photos.${SECRET_PUBLIC_DOMAIN}
+    #         paths:
+    #           - path: /api
+    #             pathType: Prefix
+    #             service:
+    #               identifier: app
+    #               port: http
     persistence:
       photos:
         type: nfs
