fix container name for immich microservices

--- a/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
     controllers:
       main:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/immich-app/immich-server
               tag: v1.106.4
