--- a/kubernetes/cluster0/apps/home/immich/machine-learning/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/machine-learning/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: immich-microservices
+  name: immich-machine-learning
   namespace: home
 spec:
   dependsOn:
