--- a/kubernetes/cluster0/apps/home/immich/machine-learning/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/machine-learning/helm-release.yaml
@@ -65,6 +65,7 @@ spec:
     persistence:
       cache:
         type: persistentVolumeClaim
+        accessMode: ReadWriteOnce
         size: 10Gi
         globalMounts:
           - path: /cache
