--- a/kubernetes/cluster0/apps/home/immich/ks.yaml
+++ b/kubernetes/cluster0/apps/home/immich/ks.yaml
@@ -63,31 +63,31 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: cluster-apps-immich-microservices
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: cluster-apps-immich-db
-#     - name: cluster-apps-immich-shared
-#     - name: cluster-apps-immich-redis
-#   path: ./kubernetes/cluster0/apps/home/immich/microservices
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-ops-cluster0
-#   healthChecks:
-#     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
-#       kind: HelmRelease
-#       name: immich-microservices
-#       namespace: home
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 3m
-#
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-immich-microservices
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-immich-db
+    - name: cluster-apps-immich-shared
+    - name: cluster-apps-immich-redis
+  path: ./kubernetes/cluster0/apps/home/immich/microservices
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: immich-microservices
+      namespace: home
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
