--- a/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
             image:
               repository: ghcr.io/immich-app/immich-server
               tag: v1.106.4
-            args: ["start.sh", "microservices"]
+            # args: ["start.sh", "microservices"]
             resources:
               requests:
                 cpu: 100m
@@ -46,6 +46,8 @@ spec:
                 enabled: true
               readiness:
                 enabled: true
+            env:
+              IMMICH_WORKERS_EXCLUDE: api
             envFrom:
               - secretRef:
                   name: immich-secret
