fix machine learning address

--- a/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
+++ b/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
@@ -10,6 +10,7 @@ data:
   DB_HOSTNAME: immich-db.home.svc.cluster.local
   DB_USERNAME: immich
   IMMICH_SERVER_URL: http://immich-server.home.svc.cluster.local:3001
+  IMMICH_MACHINE_LEARNING_URL: http://immich-machine-learning.home.svc.cluster.local:3003
   PUBLIC_IMMICH_SERVER_URL: https://photos.${SECRET_PUBLIC_DOMAIN}
   REDIS_HOSTNAME: immich-redis-master.home.svc.cluster.local
   REDIS_PORT: "6379"
