--- a/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/microservices/helm-release.yaml
@@ -46,8 +46,8 @@ spec:
                 enabled: true
               readiness:
                 enabled: true
-            env:
-              IMMICH_WORKERS_EXCLUDE: api
+            # env:
+            #   IMMICH_WORKERS_EXCLUDE: api
             envFrom:
               - secretRef:
                   name: immich-secret
