try adding ingressEndpoint, for status updates

--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -61,6 +61,8 @@ spec:
         allowExternalNameServices: true
         allowCrossNamespace: true
         ingressClass: traefik
+        ingressEndpoint:
+          ip: ${TRAEFIK_IP}
     globalArguments:
       - "--api.insecure=true"
       - "--serversTransport.insecureSkipVerify=true"
